# rssslideshow

./: CMakeLists.txt  FeedReadWorker.cpp  FeedReadWorker.h  README.md  RSSSlideShow.desktop  RssSlideShowConfig.h  RssSlideShowInterface.h  RssSlideShowSaver.cpp  RssSlideShowSaver.h  RssSlideShowSetup.cpp  RssSlideShowSetup.h  rssslideshow.cpp  rssslideshow.h  rssslideshow.kss_automoc.cpp.files  rssslideshow.moc  rssslideshowcfg.ui  ui_rssslideshowcfg.h
src/: FeedReadWorker.cpp  FeedReadWorker.h  ImageDatabase.cpp  ImageDatabase.h  RssSlideShowInterface.cpp  RssSlideShowSaver.cpp  RssSlideShowSaver.h  RssSlideShowSetup.cpp  RssSlideShowSetup.h  main.cpp
